--- a/README.rdoc
+++ b/README.rdoc
@@ -5,7 +5,7 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version (ruby 2.1.0p0 (2013-12-25 revision 44422) [x86_64-darwin14.0])
 
 * System dependencies
 
